wrote README file to describe actions of app

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,3 +1,10 @@
+<h1>Word Counter 4000!</h1>
+<h5>The best in finding and counting words within phrases since 1827</h5>
+<br>
+<br>
+<h4>Directions:</h4>
+<h5>fill in the fields with the appropriate information and click Submit.</h5>
+<br>
 <form action ="/results">
 
   <div class="form-group">
@@ -10,5 +17,8 @@
     <input id="input_word" name="input_word" class="form-control" type="text">
   </div>
 
-  <button type="submit" class="btn-block">submit</button>
+  <button type="submit" class="btn-block">Submit</button>
 </form>
+<br>
+<br>
+<h6>You are using version 6.8</h6>
