--- a/views/results.erb
+++ b/views/results.erb
@@ -1,1 +1,6 @@
-<h2> <%= @result %> </h2>
+<h3>There are <%= @result %> of:</h3>
+<h2><%= @word %></h2>
+<h3>within the sentence:</h3>
+<h2><%= @sentence %>.</h2>
+<br>
+<a href = "/" class="btn btn-primary btn-block navbar-btn" role="button">Click Here to Try Again</a>
